animation on click

--- a/styles/GoalPage.module.scss
+++ b/styles/GoalPage.module.scss
@@ -155,10 +155,11 @@
       &:hover {
         cursor: pointer;
         background-color: var(--dark-blue);
+        scale: 104%;
       }
-
+  
       &:active {
-        transform: translateY(4px);
+        transform: translateY(2px);
       }
     }
   }
@@ -205,6 +206,11 @@
     &:hover {
       cursor: pointer;
       background-color: var(--dark-blue);
+      scale: 104%;
+    }
+
+    &:active {
+      transform: translateY(2px);
     }
   }
 
