--- a/styles/UserBoard.module.scss
+++ b/styles/UserBoard.module.scss
@@ -58,7 +58,7 @@
       font-size: 1rem;
       font-weight: 100;
       line-height: 1rem;
-      color: var(--text-grey);
+      color: var(--light-grey);
     }
 
     @media (max-width: 640px) {
